# oc-memory

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: backup.md  design.md  local-models.md  openclaw-integration.md
oc_memory/: __init__.py  backup.py  cli.py  db.py  embeddings.py  extractor.py
skills/recall/: SKILL.md
tests/: test_db.py
