[project]
name = "oc-memory"
version = "0.1.0"
description = "Self-organizing agent memory for OpenClaw — SQLite + FTS5 + vector embeddings + LLM extraction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
oc-memory = "oc_memory.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oc_memory*"]

[tool.ruff]
line-length = 100
